k8s/crochelia/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: crochelia
  namespace: crochelia
spec:
  type: ClusterIP
  selector:
    app: crochelia
  ports:
    - name: http
      port: 80
      targetPort: http
